--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.6",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue-tg": "^0.2.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
