--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.6.6",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
-    "vue-router": "^4.2.5",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
