--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18.16.0-alpine3.17
 RUN mkdir -p /opt/app
 WORKDIR /opt/app
-COPY srt/package*.json ./
+COPY src/package*.json ./
 RUN npm install
 COPY src/ .
 EXPOSE 3000
