--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   vue:
     build:
-      context: .
+      context: ./frontend
     ports:
       - '4173:4173'
     restart: unless-stopped
