--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,7 +3,7 @@ FROM node:16-alpine as develop-stage
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
-COPY . .
+COPY .. .
 
 EXPOSE 4173
 RUN npm run build
