--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "animejs": "^3.2.2",
     "axios": "^1.6.6",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
