--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
     container_name: pgdb
     volumes:
       - pgdbdata:/var/lib/postgresql/data/
-    #ports:
-    #  - "5432:5432"
+    ports:
+      - "5432:5432"
     restart: "always"
 
   backend:
