--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -12,10 +12,12 @@
     }
   ],
   "compilerOptions": {
+    "baseUrl": "./src/",
     "paths": {
       "@/*": [
         "./src/*"
       ]
     }
-  }
+  },
+  "moduleResolution": "node"
 }
