--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "pm2": "pm2 start processes.json --no-daemon",
+    "pm2:list": "pm2 list",
     "start": "node ./bin/www",
     "test": "jest",
     "migrate": "node ./bin/migrate.js"
