--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,9 @@
 VITE_BASE_URL=https://bronkz.app/api
+VITE_HTTP_WS_URL=https://bronkz.app/api-ws
+VITE_WS_URL=ws://bronkz.app/ws/
+
+#VITE_HTTP_WS_URL=http://192.168.50.104:8999
+#VITE_WS_URL=ws://192.168.50.104:8999/ws/
+
+#VITE_HTTP_WS_URL=http://192.168.1.113:8999
+#VITE_WS_URL=ws://192.168.1.113:8999/ws/
