--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,5 +34,13 @@ services:
       - '3000:3000'
     restart: always
 
+  ws:
+    build:
+      context: ./backend-ws
+    depends_on:
+     - backend
+    ports:
+      - '8999:8999'
+
 volumes:
   pgdbdata: null
