--- a/backend-ws/Dockerfile
+++ b/backend-ws/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:18.16.0-alpine3.17
 RUN mkdir -p /opt/app
 WORKDIR /opt/app
-COPY src/package*.json ./
+COPY package*.json ./
 RUN npm install
-COPY src/ .
+COPY . .
 EXPOSE 8999
 
 CMD [ "npm", "run", "start"]
