--- a/backend/src/package.json
+++ b/backend/src/package.json
@@ -1,23 +1,27 @@
 {
-  "name": "src",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "pm2": "pm2 start processes.json --no-daemon",
-    "pm2:list": "pm2 list",
-    "start": "node ./bin/www",
-    "test": "jest",
-    "migrate": "node ./bin/migrate.js"
-  },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "jest": "^29.7.0",
-    "morgan": "~1.9.1",
-    "pg": "^8.11.3",
-    "pm2": "^5.3.1",
-    "sequelize": "^6.35.2"
-  }
+    "name": "src",
+    "version": "0.0.0",
+    "private": true,
+    "scripts": {
+        "pm2": "pm2 start processes.json --no-daemon",
+        "pm2:list": "pm2 list",
+        "start": "node ./bin/www",
+        "test": "jest",
+        "migrate": "node ./bin/migrate.js",
+        "format": "prettier --write ."
+    },
+    "dependencies": {
+        "cookie-parser": "~1.4.4",
+        "cors": "^2.8.5",
+        "debug": "~2.6.9",
+        "express": "~4.16.1",
+        "jest": "^29.7.0",
+        "morgan": "~1.9.1",
+        "pg": "^8.11.3",
+        "pm2": "^5.3.1",
+        "sequelize": "^6.35.2"
+    },
+    "devDependencies": {
+        "prettier": "^3.0.3"
+    }
 }
