--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write src"
   },
   "dependencies": {
+    "@sentry/vue": "^7.99.0",
     "animejs": "^3.2.2",
     "axios": "^1.6.6",
     "pinia": "^2.1.7",
