--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,6 @@
-VITE_BASE_URL=https://bronkz.app/api
-VITE_HTTP_WS_URL=https://bronkz.app/api-ws
-VITE_WS_URL=wss://bronkz.app/ws/
+VITE_BASE_URL=https://scam-coin.lol/api
+VITE_HTTP_WS_URL=https://scam-coin.lol/api-ws
+VITE_WS_URL=wss://scam-coin.lol/ws/
 
 #VITE_HTTP_WS_URL=http://192.168.50.104:8999
 #VITE_WS_URL=ws://192.168.50.104:8999/ws/
